[gd_scene load_steps=30 format=3 uid="uid://cme6nmukjil8s"]

[ext_resource type="Script" path="res://addons/hathora/plugin/editor/control_ui.gd" id="1_1eov4"]
[ext_resource type="Texture2D" uid="uid://pjo82re3x7fd" path="res://addons/hathora/plugin/assets/HathoraConfigBanner.png" id="1_ov2ni"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/ascii_art_text_label.gd" id="3_0p138"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/modules/project_exporter.gd" id="3_bp7wg"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/section_toggle.gd" id="3_mi8w7"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/header_buttons.gd" id="3_uvapc"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/modules/tar_maker.gd" id="4_fftlc"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/settings_panels/developer_settings.gd" id="4_lffpm"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/modules/dockerfile_maker.gd" id="5_uqf2c"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/modules/build_deployer.gd" id="6_2m224"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/settings_panels/server_build_settings.gd" id="6_o00nj"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/settings_panels/deployment_settings.gd" id="8_kwcbp"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/settings_panels/room_settings.gd" id="9_lsqtf"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/latest_deployment_info.gd" id="9_qjw1b"]
[ext_resource type="Script" path="res://addons/hathora/plugin/editor/latest_deployment.gd" id="14_mcull"]

[node name="Hathora" type="VBoxContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
script = ExtResource("1_1eov4")

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ScrollChild" type="VBoxContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Scroll/ScrollChild"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Scroll/ScrollChild/MarginContainer"]
layout_mode = 2

[node name="HathoraLogo" type="TextureRect" parent="Scroll/ScrollChild/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
texture = ExtResource("1_ov2ni")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Scroll/ScrollChild/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Server Hosting"
horizontal_alignment = 1

[node name="HeaderButtonsContainer" type="HBoxContainer" parent="Scroll/ScrollChild/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_uvapc")

[node name="Console" type="Button" parent="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer"]
layout_mode = 2
focus_mode = 0
text = "Console"
flat = true

[node name="Tutorial" type="Button" parent="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer"]
visible = false
layout_mode = 2
focus_mode = 0
text = "Tutorial"
flat = true

[node name="Docs" type="MenuButton" parent="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer"]
layout_mode = 2
text = "Docs"
item_count = 2
popup/item_0/text = "Plugin"
popup/item_0/id = 1
popup/item_1/text = "SDK"
popup/item_1/id = 1

[node name="Discord" type="Button" parent="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer"]
layout_mode = 2
focus_mode = 0
text = "Discord"
flat = true

[node name="LoginContent" type="VBoxContainer" parent="Scroll/ScrollChild"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/ScrollChild/LoginContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.760784, 0.760784, 1)
horizontal_alignment = 1
text = "Create an account or log in to Hathora Cloud to get started"
autowrap_mode = 3

[node name="LoginButton" type="Button" parent="Scroll/ScrollChild/LoginContent"]
layout_mode = 2
text = "Login to Hathora"

[node name="MainContentPanel" type="PanelContainer" parent="Scroll/ScrollChild"]
unique_name_in_owner = true
layout_mode = 2

[node name="MainContent" type="VBoxContainer" parent="Scroll/ScrollChild/MainContentPanel"]
layout_mode = 2

[node name="ASCIIArt" type="RichTextLabel" parent="Scroll/ScrollChild/MainContentPanel/MainContent"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 2
focus_mode = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
scroll_active = false
autowrap_mode = 0
script = ExtResource("3_0p138")

[node name="DeveloperSectionToggle" type="Button" parent="Scroll/ScrollChild/MainContentPanel/MainContent" node_paths=PackedStringArray("node_to_show")]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_pressed = true
text = "Developer Settings"
alignment = 0
script = ExtResource("3_mi8w7")
node_to_show = NodePath("../DeveloperSectionContainer")

[node name="DeveloperSectionContainer" type="MarginContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 10

[node name="DeveloperSettings" type="VBoxContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent/DeveloperSectionContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_lffpm")

[node name="BuildSectionToggle" type="Button" parent="Scroll/ScrollChild/MainContentPanel/MainContent" node_paths=PackedStringArray("node_to_show")]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
text = "Server Build Settings"
alignment = 0
script = ExtResource("3_mi8w7")
node_to_show = NodePath("../BuildSectionContainer")

[node name="BuildSectionContainer" type="MarginContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 10

[node name="ServerBuildSettings" type="VBoxContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent/BuildSectionContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("6_o00nj")

[node name="DeploySectionToggle" type="Button" parent="Scroll/ScrollChild/MainContentPanel/MainContent" node_paths=PackedStringArray("node_to_show")]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
text = "Deployment Settings"
alignment = 0
script = ExtResource("3_mi8w7")
node_to_show = NodePath("../DeploySectionContainer")

[node name="DeploySectionContainer" type="MarginContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 10

[node name="DeploymentSettings" type="VBoxContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent/DeploySectionContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("8_kwcbp")

[node name="RoomSectionToggle" type="Button" parent="Scroll/ScrollChild/MainContentPanel/MainContent" node_paths=PackedStringArray("node_to_show")]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
text = "Create Room"
alignment = 0
script = ExtResource("3_mi8w7")
node_to_show = NodePath("../RoomSectionContainer")

[node name="RoomSectionContainer" type="MarginContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 10

[node name="RoomSettings" type="VBoxContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent/RoomSectionContainer"]
layout_mode = 2
script = ExtResource("9_lsqtf")

[node name="LatestDeployentInfo" type="VBoxContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Scroll/ScrollChild/MainContentPanel/MainContent/LatestDeployentInfo"]
layout_mode = 2

[node name="LatestDeploymentLabel" type="Label" parent="Scroll/ScrollChild/MainContentPanel/MainContent/LatestDeployentInfo"]
layout_mode = 2
text = "Latest Deployment"

[node name="LatestDeploymentTextEdit" type="TextEdit" parent="Scroll/ScrollChild/MainContentPanel/MainContent/LatestDeployentInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
text = "appId: app-fffae377-8b40-4119-a1cd-56b3302924e7
createdAt: 2024-05-27T07:42:55.949Z
deployment: 4
plan: tiny
roomsPerProcess: 1
transport: udp
port: 7531
"
editable = false
wrap_mode = 1
autowrap_mode = 1
scroll_smooth = true
scroll_fit_content_height = true
script = ExtResource("9_qjw1b")

[node name="MarginContainer" type="MarginContainer" parent="Scroll/ScrollChild/MainContentPanel/MainContent/LatestDeployentInfo"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="ProjectExporter" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_bp7wg")

[node name="TarMaker" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_fftlc")

[node name="DockerfileMaker" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_uqf2c")

[node name="BuildDeployer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_2m224")

[node name="LatestDeploymentGetter" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("14_mcull")

[node name="BuildDirFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Select Hathora Build Directory"
initial_position = 1
size = Vector2i(800, 700)
min_size = Vector2i(400, 700)
ok_button_text = "Select Current Folder"
mode_overrides_title = false
file_mode = 2
show_hidden_files = true

[node name="PathToTarFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Select a Hathora Tar File"
initial_position = 1
size = Vector2i(800, 700)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.tar.tgz", "*.tgz", "*.tar.gz")
show_hidden_files = true

[connection signal="pressed" from="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer/Console" to="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer" method="_on_console_pressed"]
[connection signal="pressed" from="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer/Tutorial" to="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer" method="_on_tutorial_pressed"]
[connection signal="pressed" from="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer/Discord" to="Scroll/ScrollChild/MarginContainer/VBoxContainer/HeaderButtonsContainer" method="_on_discord_pressed"]
[connection signal="pressed" from="Scroll/ScrollChild/LoginContent/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="gui_input" from="Scroll/ScrollChild/MainContentPanel/MainContent/LatestDeployentInfo/LatestDeploymentTextEdit" to="Scroll/ScrollChild/MainContentPanel/MainContent/LatestDeployentInfo/LatestDeploymentTextEdit" method="_on_gui_input"]
